diapo complete ! fonctionne !

--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 	<!-- fontawesome -->
     <script src="https://kit.fontawesome.com/7e70710549.js"></script>
 
-	<!-- mes liens -->
-    <script type="text/javascript" src="public/js/MapData.js"></script>
-    <script type="text/javascript" src="public/js/diapo.js"></script>
-
+	
 </head>
 <body>
 	<header>
@@ -98,8 +95,8 @@
 		    container: 'map',
 		    style: 'mapbox://styles/mapbox/streets-v11',
 		    //coordonnées Orléans
-		    center: [1.905975, 47.900959],
-			zoom: 4
+		    center: [1.433333, 43.600000],
+			zoom: 10
 		   });
 		</script>
 		
@@ -112,7 +109,11 @@
 		<p>Site réalisé par Jally Phejar 2019 - 2020</p>
 	</footer>
 
-	<script type="text/javascript">change();</script>
+
+	<!-- mes liens -->
+    <script type="text/javascript" src="public/js/MapData.js"></script>
+    <script type="text/javascript" src="public/js/diapo.js"></script>
+    <script type="text/javascript" src="public/js/main.js"></script>
 
 	
 
