données positions pas encore récupérées

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<!-- css -->
 	<link rel="stylesheet" type="text/css" href="public/css/style.css">
 	<!-- jQuery -->
-	<script type="text/javascript" src="public/js/script.js"></script>
 	<script type="text/javascript" src="public/js/jquery-3.4.1.js"></script>
 	<!-- mapbox -->
 	<script src='https://api.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.js'></script>
@@ -88,18 +87,6 @@
 		<h2 id="carte"><i class="fas fa-map-marked-alt"></i> Carte</h2>
 
 		<div id='map' style='width: 400px; height: 300px;'></div>
-		<script>
-			//si on met tt ça dans une class
-		  mapboxgl.accessToken = 'pk.eyJ1IjoiamFsbHktcGgiLCJhIjoiY2swdGMwNHZjMGFzZDNicGU2bHVhODkwbCJ9.T83X_8s7_gWjdH67B7Zcew';
-		  var map = new mapboxgl.Map({
-		    container: 'map',
-		    style: 'mapbox://styles/mapbox/streets-v11',
-		    //coordonnées Orléans
-		    center: [1.433333, 43.600000],
-			zoom: 10
-		   });
-		</script>
-		
 
 	</section>
 
@@ -113,6 +100,7 @@
 	<!-- mes liens -->
     <script type="text/javascript" src="public/js/MapData.js"></script>
     <script type="text/javascript" src="public/js/diapo.js"></script>
+    <script type="text/javascript" src="public/js/Test.js"></script>
     <script type="text/javascript" src="public/js/main.js"></script>
 
 	
