--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 	<!-- css -->
 	<link rel="stylesheet" type="text/css" href="public/css/style.css">
-	<!-- jQuery -->
-	<script type="text/javascript" src="public/js/jquery-3.4.1.js"></script>
-	<!-- mapbox -->
-	<script src='https://api.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.js'></script>
+	
 	<link href='https://api.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css' rel='stylesheet' />
-	<!-- fontawesome -->
-    <script src="https://kit.fontawesome.com/7e70710549.js"></script>
+	<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v1.0.0/MarkerCluster.css' rel='stylesheet' />
+	
+
+
 
 	
 </head>
 <body>
+
+
 	<header>
 		<div id="logoHeader">
 			<!--display none on h1 -->
@@ -35,12 +36,7 @@
 		</nav>	
 	</header>
 
-<!-----
-  <div class="input-group">
-  <span class="input-group-addon" id="sizing-addon2">@</span>
-  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon2">
-</div>
-	--->
+
 	<section id="section1">
 		<h2 id="diapo"><i class="far fa-lightbulb"></i> Diaporama</h2>
 
@@ -98,10 +94,21 @@
 
 
 	<!-- mes liens -->
+	<!-- jQuery -->
+	<script type="text/javascript" src="public/js/jquery-3.4.1.js"></script>
+	<!-- mapbox -->
+	<script src='https://api.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.js'></script>
+	<script src='https://api.mapbox.com/mapbox.js/v3.2.1/mapbox.js'></script>
+
+
+	<script type="text/javascript" src="public/js/Ajax.js"></script>
     <script type="text/javascript" src="public/js/MapData.js"></script>
     <script type="text/javascript" src="public/js/diapo.js"></script>
     <script type="text/javascript" src="public/js/Test.js"></script>
     <script type="text/javascript" src="public/js/main.js"></script>
+
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/7e70710549.js"></script>
 
 	
 
