canvas signature OK ✔
fonctionne, s'affiche bien et pr effacer, on rafraichit la page

--- a/index.html
+++ b/index.html
@@ -84,6 +84,23 @@
 
 		<div id='map' style='width: 400px; height: 300px;'></div>
 
+
+		<!-- formulaire réservation -->
+		<form>
+			<label>Nom</label>
+			<input type="text" name="name">
+
+			<label>Prénom</label>
+			<input type="text" name="name">
+
+			<input type="submit" name="submit" value="Réserver un vélo">
+		</form>
+
+		<div id="canvasDiv"></div>
+		<button id="clear"></button>
+		
+		
+
 	</section>
 
 
@@ -101,10 +118,15 @@
 	<script src='https://api.mapbox.com/mapbox.js/v3.2.1/mapbox.js'></script>
 
 
+	<!-- sketch -->
+	<script type="text/javascript" src="public/js/Sketch.js"></script>
+	<!-- map -->
 	<script type="text/javascript" src="public/js/Ajax.js"></script>
     <script type="text/javascript" src="public/js/MapData.js"></script>
+    <!-- diapo -->
     <script type="text/javascript" src="public/js/diapo.js"></script>
     <script type="text/javascript" src="public/js/Test.js"></script>
+    <!-- main -->
     <script type="text/javascript" src="public/js/main.js"></script>
 
     <!-- fontawesome -->
