là tt fonctionne encore

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Projet 3</title>
 	
 	<!-- bootstrap - Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- css -->
 	<link rel="stylesheet" type="text/css" href="public/css/style.css">
 	
@@ -30,13 +30,56 @@
 			<img src="public/img/cyclick.png">
 		</div>
 
-		<nav>
-			<ul class="nav nav-pills">
-			  <li role="presentation" ><a href="#">Accueil</a></li>
-			  <li role="presentation" ><a href="#titleDiapo">Réservez votre vélo ?</a></li>
-			  <li role="presentation" ><a href="#carte">Carte des stations</a></li>
-			</ul>
-		</nav>	
+ 		
+ 		
+		 
+			 <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				    <span class="navbar-toggler-icon"></span>
+				</button>
+
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mr-auto">
+					  <li role="presentation" ><a href="#">Accueil</a></li>
+					  <li role="presentation" ><a href="#titleDiapo">Réservez votre vélo ?</a></li>
+					  <li role="presentation" ><a href="#carte">Carte des stations</a></li>
+					</ul>
+
+				</div>
+				
+			</nav>	 --> 
+
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar w/ text</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+    </ul>
+    <span class="navbar-text">
+      Navbar text with an inline element
+    </span>
+  </div>
+</nav>
+
+
+
+		
+
+		
+
+
+
 	</header>
 
 
