--- a/index.html
+++ b/index.html
@@ -2,19 +2,25 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<title>Projet 3</title>
+	<title>Cyclick</title>
 	
 	<!-- bootstrap - Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- css -->
 	<link rel="stylesheet" type="text/css" href="public/css/style.css">
-	
+	<!-- mediaqueries -->
+	<link rel="stylesheet" type="text/css" href="public/css/mediaqueries.css">
+
+	<!-- mapbox-->
 	<link href='https://api.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css' rel='stylesheet' />
 	<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v1.0.0/MarkerCluster.css' rel='stylesheet' />
 
+	<!--viewport -->
+	<meta name="viewport" content="initial-scale=1">
+
 	<!--fonts-->
 	<link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Jaldi&display=swap" rel="stylesheet">
-	
+
 
 
 
@@ -30,55 +36,22 @@
 			<img src="public/img/cyclick.png">
 		</div>
 
- 		
- 		
-		 
-			 <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				    <span class="navbar-toggler-icon"></span>
-				</button>
-
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto">
-					  <li role="presentation" ><a href="#">Accueil</a></li>
-					  <li role="presentation" ><a href="#titleDiapo">Réservez votre vélo ?</a></li>
-					  <li role="presentation" ><a href="#carte">Carte des stations</a></li>
-					</ul>
-
-				</div>
-				
-			</nav>	 --> 
-
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar w/ text</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-    </ul>
-    <span class="navbar-text">
-      Navbar text with an inline element
-    </span>
-  </div>
-</nav>
-
-
-
-		
-
-		
-
-
+		<nav class="navbar navbar-expand-lg navbar-light ">
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarText">
+		    <ul class="navbar-nav mr-auto">
+		      <li class="nav-item active">
+		        <a class="nav-link" href="#titleDiapo">Réserver votre vélo ?</a>
+		      </li>
+		      <li class="nav-item active">
+		        <a class="nav-link" href="#carte">Voir la carte</a>
+		      </li>
+		    </ul>
+		    
+		  </div>
+		</nav>
 
 	</header>
 
@@ -216,21 +189,6 @@
 		input.value = adress;
 	}
 
-	// var inputPrenom = document.getElementById("inputPrenom").value;
-	// 		var inputNom = document.getElementById("inputNom").value;
-	// 		var inputAdresse = document.getElementById("adresseMapInput").value;
-	// $(document).ready(function(){
-	// 	// if(sessionStorage.getItem('nom')){
-	// 	// 	document.getElementById('zoneTimer').style.display = 'block';
-	// 	// 	var timer = new Timer();
-	// 	// }
-	// });
-
-			
-			// var nom = sessionStorage.getItem('nom');
-			// var date1 = sessionStorage.getItem('date1');
-			// var date2 = Date.now();
-			// var diff = date2 - date1;
 			
 			//récup de données des input
 			let storagePrenom = sessionStorage.getItem('prenom');
@@ -268,6 +226,10 @@
 
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/7e70710549.js"></script>
+    <!--jquery bootstrap-->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 	
 
